--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -455,6 +455,7 @@
 
         <br>
          <!-------------- BONUS --------------->
+         <!-- Nested -->
          <div class="row">
             <div class="col-12">
                 <h3>Nested</h3>
@@ -511,6 +512,82 @@
                 </div>
             </div>
         </div>
+
+        <br>
+        <!-- Alignment -->
+        <div class="row">
+            <div class="col-12">
+                <h3>Alignment</h3>
+            </div>
+        </div>
+
+        <!-- riga start-->
+        <div class="row">
+            <div class="col-6">
+                <div class="box">
+                    start
+                </div>
+            </div>
+        </div>
+
+        <!-- riga center-->
+        <div class="row center">
+            <div class="col-6">
+                <div class="box">
+                    center
+                </div>
+            </div>
+        </div>
+
+        <!-- riga end-->
+        <div class="row end">
+            <div class="col-6">
+                <div class="box">
+                    end
+                </div>
+            </div>
+        </div>
+
+        <!-- riga top-->
+        <div class="row">
+            <div class="col-6">
+                <div class="box box-2"></div>
+            </div>
+
+            <div class="col-6">
+                <div class="box">
+                    top
+                </div>
+            </div>
+        </div>
+
+        <!-- riga middle-->
+        <div class="row middle">
+            <div class="col-6">
+                <div class="box box-2"></div>
+            </div>
+
+            <div class="col-6">
+                <div class="box">
+                    middle
+                </div>
+            </div>
+        </div>
+
+        <!-- riga end-->
+        <div class="row bottom">
+            <div class="col-6">
+                <div class="box box-2"></div>
+            </div>
+
+            <div class="col-6">
+                <div class="box">
+                    bottom
+                </div>
+            </div>
+        </div>
+
+        
 
     </div>
     
