BONUS - Justify Content

--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -586,6 +586,80 @@
                 </div>
             </div>
         </div>
+        <br>
+
+        <!-- Justify Content -->
+        <div class="row">
+
+            <!-- titolo -->
+            <div class="col-12">
+                <h3>Justify Content</h3>
+            </div>
+
+            <!-- Space Around -->
+            <div class="col-12">
+                <h5>Space Around</h5>
+            </div>
+
+            <div class="col-12">
+                <!-- sfondo blu -->
+                <div class="box">
+
+                    <!-- riga interna -->
+                    <div class="row around">
+
+                        <!-- colonna -->
+                        <div class="col-2">
+                            <div class="box-green"></div>
+                        </div>
+
+                        <!-- colonna -->
+                        <div class="col-2">
+                            <div class="box-green"></div>
+                        </div>
+
+                        <!-- colonna -->
+                        <div class="col-2">
+                            <div class="box-green"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Space Between -->
+            <div class="col-12">
+                <h5>Space Around</h5>
+            </div>
+
+            <div class="col-12">
+                <!-- sfondo blu -->
+                <div class="box">
+
+                    <!-- riga interna -->
+                    <div class="row between">
+
+                        <!-- colonna -->
+                        <div class="col-2">
+                            <div class="box-green"></div>
+                        </div>
+
+                        <!-- colonna -->
+                        <div class="col-2">
+                            <div class="box-green"></div>
+                        </div>
+
+                        <!-- colonna -->
+                        <div class="col-2">
+                            <div class="box-green"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+
+
 
         
 
